Public static test cases (#4)
* Using jshell

* Add more test cases for jshell method executor

* Add random generation
Add c0ps

* More design

* Design

* Extract unit test builder from test case generator (#7)

* separated test generator from test case generator

* added some spock tests, extended unit test builder

* added class input to unit test builder
fixed tests

* Feature/test generator fixes (#9)

introduced SourceCodeSupplier
changed import strategy from "per method" to "per source code block"
extracted assertions and imports creation
fixed most other review comments

* Enhancement/logging (#8)

* Add logging
Move MethodInput to Groovy

* Ignore reflective access warning